--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bookshelf",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://exercises-07-context.bookshelf.lol/",
+  "homepage": "https://exercises-08-compound-components.bookshelf.lol/",
   "engines": {
     "node": "^10.13 || 12 || 14 || 15",
     "npm": ">=6"
@@ -27,7 +27,8 @@
     "react-dom": "^17.0.1",
     "react-error-boundary": "^3.1.0",
     "react-icons": "^4.1.0",
-    "react-query": "^3.12.0",
+    "react-query": "2.1.1",
+    "react-query-devtools": "2.3.3",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^4.0.1",
